Fix height of name input field in precall view in iOS Safari
Safari on iOS sometimes includes a navigation bar and another menu bar at the top and the bottom of the screen, and this makes this field look too small.

--- a/web/less/room.less
+++ b/web/less/room.less
@@ -802,6 +802,7 @@ body {
     .justify-content(space-between);
     @media @smartphonesPortrait {
       margin: 10px 0 0 0;
+      min-height: 44px;
     }
     div {
       display: flex;
